samples/_failures_safe/1761418530_4b9e3b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_faa4fdee.c:187: error: expected ‘;’, ‘,’ or ‘)’ at end of input
